--- a/react-burger/src/components/burger-constructor/burger-constructor.module.css
+++ b/react-burger/src/components/burger-constructor/burger-constructor.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  height: calc(100vh - 342px);
+  height: calc(100vh - 532px);
+  gap: 10px;
 }
 
 .buttonSection {
